contact, login e registar

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -66,12 +66,7 @@
         </div>
     </div>
 
-
-
-
-
-    <script src="login.js"></script>
-    <script src="contact.js"></script>
+    <script src="javascript/contact.js"></script>
 </body>
 
 </html>
