--- a/projeto/login.html
+++ b/projeto/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
     <title>Registo</title>
 </head>
 
@@ -12,9 +13,9 @@
 
     <!---------------Register--------------->
 
-    <form id="registerform">
+    <form id="registerform" class="mb-3">
         <label for="username">Username:</label>
-        <input type="text" id="username" required><br>
+        <input type="text" id="username"  required><br>
         <label for="fullname">Nome:</label>
         <input type="text" id="fullname" required><br>
         <label for="email">E-mail:</label>
