--- a/projeto/index.html
+++ b/projeto/index.html
@@ -11,17 +11,35 @@
 </head>
 
 <body>
-    
+    <br>
+    <br>
     <!-- menu -->
     <div >
-        <a class="nav-link" href="login.html">Login</a>
-        <a class="nav-link" href="login.html">Registar</a>
-        <a class="nav-link" href="">Home</a>
-        <a class="nav-link" href="">Marcar</a>
-        <a class="nav-link" href="">Sobre nós</a>
-        <a class="nav-link" href="">Contactos</a>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active" href="">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="">Marcar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="">Sobre nós</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="">Contactos</a>
+            </li>
+            <li class="nav-item">
+                <a href="login.html">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="login.html">
+                    <button type="submit" class="btn btn-primary">Registar</button>
+                </a>
+            </li>
+        </ul>        
     </div>
-    
 
     <!-- contactos -->
 
