--- a/projeto/index.html
+++ b/projeto/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     
     <title>CTB</title>
 </head>
@@ -14,7 +15,7 @@
     <br>
     <br>
     <!-- menu -->
-    <div >
+    <div>
         <ul class="nav justify-content-center">
             <li class="nav-item">
                 <a class="nav-link active" href="">Home</a>
@@ -76,9 +77,7 @@
                     <input type="email" name="email" id="email" placeholder="Ex: exemplo@email.pt">
                     <br>
                     <br>
-                    <label for="subject">Assunto:</label>
-                    <br>
-                    <br>
+                    <label for="subject">Assunto:</label><br>
                     <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Escreva alguma coisa ..."></textarea>
                     <br>
                     <button type="submit" onclick="submit_message()">Submeter</button>
