--- a/projeto/index.html
+++ b/projeto/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     
-    <title>CTB</title>
+    <title>Covid Test Booking</title>
 </head>
 
 <body>
