--- a/old/index.html
+++ b/old/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../old/css/index.css">
     <title>Covid Test Booking</title>
-
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <img src="img/LOGO.png" class="navbar-brand" href="#" alt="">
+          <img src="img/LOGO.png" class="navbar-brand" href="#" height="50px"  alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,10 +35,22 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Contactos</a>
               </li>
+              <li class="nav-item">
+                <button type="button" class="btn btn-primary" type="submit">Login</button>
+              </li>
+              <li class="nav-item ps-5">
+                <button type="button" class="btn btn-primary" type="submit">Registar</button>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
+
+      
+
+
+
+
 
     <!-- contactos -->
 
