--- a/old/index.html
+++ b/old/index.html
@@ -2,103 +2,114 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../old/css/index.css">
-    <title>Covid Test Booking</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../old/css/index.css">
+  <title>Covid Test Booking</title>
 </head>
 
 <body>
+  <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <img src="img/LOGO.png" class="navbar-brand" href="#" height="50px"  alt="">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+      <div class="container-fluid d-flex justify-content-evenly">
+        <img src="img/LOGO.png" class="navbar-brand" height="50px" href="#" alt="">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="d-flex justify-content-end">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+                <a class="nav-link" aria-current="page" href="#">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Serviços</a>
+                <a class="nav-link" aria-current="page" href="#">Serviços</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Testes</a>
+                <a class="nav-link" aria-current="page" href="#">Testes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Contactos</a>
+                <a class="nav-link" aria-current="page" href="#">Contactos</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item ps-2">
                 <button type="button" class="btn btn-primary" type="submit">Login</button>
               </li>
-              <li class="nav-item ps-5">
+              <li class="nav-item ps-2">
                 <button type="button" class="btn btn-primary" type="submit">Registar</button>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
+    <div col="12">
+      <div class="img">
+        <img class="image_presentation" src="img/covidtry2.png" width="100%" height="500vh">
+        <p class="h1">BEM VINDOS À COVID TEST BOOKING</p>
+      </div>
+    </div>
+  </div>
 
-      
 
 
 
+  <!-- contactos -->
 
 
-    <!-- contactos -->
+  <br><br><br>
 
-
-    <br><br><br><br>
-
-    <div class="container">
-        <p>Deixe-nos uma mensagem</p>
+  <div class="container">
+    <p>Deixe-nos uma mensagem</p>
+    <br>
+    <br>
+    <div class="row">
+      <div class="col">
+        <h3>Morada</h3>
+        <p>Rua da Bicicleta nº1 - Porto</p>
         <br>
+        <h3>Horarios</h3>
+        <p>2ª a 6ªfeira - 10h às 19h</p>
+        <p>Sábados - 8h às 13h</p>
+        <p>Domingos e Feriados - Encerrado</p>
         <br>
-        <div class="row">
-            <div class="col">
-                <h3>Morada</h3>
-                <p>Rua da Bicicleta nº1 - Porto</p>
-                <br>
-                <h3>Horarios</h3>
-                <p>2ª a 6ªfeira - 10h às 19h</p>
-                <p>Sábados - 8h às 13h</p>
-                <p>Domingos e Feriados - Encerrado</p>
-                <br>
-                <h3>E-mails</h3>
-                <p>comercial@ctb.com</p>
-            </div>
-            <div class="col">
-                <form action="">
-                    <br>
-                    <label for="fullname">Nome Completo:</label>
-                    <br>
-                    <input type="text" name="fullname" id="fname" placeholder="Ex: Gonçalo Pereira">
-                    <br>
-                    <br>
-                    <label for="email">E-mail:</label>
-                    <br>
-                    <input type="email" name="email" id="email" placeholder="Ex: exemplo@email.pt">
-                    <br>
-                    <br>
-                    <label for="subject">Assunto:</label><br>
-                    <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Escreva alguma coisa ..."></textarea>
-                    <br>
-                    <button type="submit" onclick="submit_message()">Submeter</button>
-                    <br>
-                    <br>
-                </form>
-            </div>
-        </div>
-    </div>    
+        <h3>E-mails</h3>
+        <p>comercial@ctb.com</p>
+      </div>
+      <div class="col">
+        <form action="">
+          <br>
+          <label for="fullname">Nome Completo:</label>
+          <br>
+          <input type="text" name="fullname" id="fname" placeholder="Ex: Gonçalo Pereira">
+          <br>
+          <br>
+          <label for="email">E-mail:</label>
+          <br>
+          <input type="email" name="email" id="email" placeholder="Ex: exemplo@email.pt">
+          <br>
+          <br>
+          <label for="subject">Assunto:</label><br>
+          <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Escreva alguma coisa ..."></textarea>
+          <br>
+          <button type="submit" onclick="submit_message()">Submeter</button>
+          <br>
+          <br>
+        </form>
+      </div>
+    </div>
+  </div>
 
-    <script src="javascript/contact.js"></script>
+  <script src="javascript/contact.js"></script>
 </body>
 
 </html>
