--- a/old/index.html
+++ b/old/index.html
@@ -42,10 +42,10 @@
                 <a class="nav-link" aria-current="page" href="#">Contactos</a>
               </li>
               <li class="nav-item ps-2">
-                <button type="button" class="btn btn-primary" type="submit">Login</button>
+                <button type="button" class="btn btn-primary">Login</button>
               </li>
               <li class="nav-item ps-2">
-                <button type="button" class="btn btn-primary" type="submit">Registar</button>
+                <button type="button" class="btn btn-primary">Registar</button>
               </li>
             </ul>
           </div>
@@ -55,7 +55,31 @@
     <div col="12">
       <div class="img">
         <img class="image_presentation" src="img/covidtry2.png" width="100%" height="500vh">
-        <p class="h1">BEM VINDOS À COVID TEST BOOKING</p>
+        <p class="welcometext">BEM VINDOS À COVID TEST BOOKING</p>
+        <p class="welcometext2">Sem Preocupações, Sem Complicações</p>  
+        <button type="button" class="btn btn-primary btnimage">MARQUE AGORA</button>
+
+        <!-- <div class="row">
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Porquê nós?</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Saber mais</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card2">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
       </div>
     </div>
   </div>
