--- a/projeto/index.html
+++ b/projeto/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../old/css/index.css">
+  <link rel="stylesheet" href="../projeto/css/index.css">
   <title>Covid Test Booking</title>
 </head>
 
@@ -58,28 +58,6 @@
         <p class="welcometext">BEM VINDOS À COVID TEST BOOKING</p>
         <p class="welcometext2">Sem Preocupações, Sem Complicações</p>  
         <button type="button" class="btn btn-primary btnimage">MARQUE AGORA</button>
-
-        <!-- <div class="row">
-          <div class="col-sm-6">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Porquê nós?</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Saber mais</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card2">
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
       </div>
     </div>
   </div>
