--- a/projeto/index.html
+++ b/projeto/index.html
@@ -62,6 +62,62 @@
     </div>
   </div>
 
+  <section id="why-us" class="why-us">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="content">
+            <h3>Porquê nós?</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+              Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+            </p>
+            <div class="text-center">
+              <a href="#about" class="more-btn">Saber mais<i class="bx bx-chevron-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 d-flex align-items-stretch">
+          <div class="icon-boxes d-flex flex-column justify-content-center">
+            <div class="row">
+              <div class="col-xl-4 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <i class="bx bx-receipt"></i>
+                  <h4>Simples</h4>
+                  <p>Numa questão de minutos 
+                    consegue-se uma marcação,
+                    sem complicações 
+                    e complexidades</p>
+                </div>
+              </div>
+              <div class="col-xl-4 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <i class="bx bx-cube-alt"></i>
+                  <h4>Serviços</h4>
+                  <p>EA diversidade dos serviços 
+                    disponibilizados oferece
+                    um leque de opções para ser 
+                    testado como desejar</p>
+                </div>
+              </div>
+              <div class="col-xl-4 d-flex align-items-stretch">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <i class="bx bx-images"></i>
+                  <h4>Apoio ao Cliente</h4>
+                  <p>Se tiver alguma dúvida 
+                    em relação a um serviço ou alguma 
+                    dificuldade,fornecemos um 
+                    apoio personalizado
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div><!-- End .content-->
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Why Us Section -->
 
 
 
