--- a/projeto/index.html
+++ b/projeto/index.html
@@ -56,68 +56,114 @@
       <div class="img">
         <img class="image_presentation" src="img/covidtry2.png" width="100%" height="500vh">
         <p class="welcometext">BEM VINDOS À COVID TEST BOOKING</p>
-        <p class="welcometext2">Sem Preocupações, Sem Complicações</p>  
+        <p class="welcometext2">Sem Preocupações, Sem Complicações</p>
         <button type="button" class="btn btn-primary btnimage">MARQUE AGORA</button>
-      </div>
-    </div>
-  </div>
-
-  <section id="why-us" class="why-us">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 d-flex align-items-stretch">
-          <div class="content">
-            <h3>Porquê nós?</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
-            </p>
-            <div class="text-center">
-              <a href="#about" class="more-btn">Saber mais<i class="bx bx-chevron-right"></i></a>
+        
+        
+        <!-- ======= Why Us Section ======= -->
+        <section id="why-us" class="why-us">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="content">
+                  <h3>Porquê nós?</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    corporis.
+                  </p>
+                  <div class="text-center">
+                    <a href="#about" class="more-btn">Saber mais<i class="bx bx-chevron-right"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-8 d-flex align-items-stretch">
+                <div class="icon-boxes d-flex flex-column justify-content-center">
+                  <div class="row">
+                    <div class="col-xl-4 d-flex align-items-stretch">
+                      <div class="icon-box1 mt-4 mt-xl-0">
+                        <i class="bx bx-receipt"></i>
+                        <h4>Simples</h4>
+                        <p>Numa questão de minutos
+                          consegue-se uma marcação,
+                          sem complicações
+                          e complexidades</p>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 d-flex align-items-stretch">
+                      <div class="icon-box2 mt-4 mt-xl-0">
+                        <i class="bx bx-cube-alt"></i>
+                        <h4>Serviços</h4>
+                        <p>EA diversidade dos serviços
+                          disponibilizados oferece
+                          um leque de opções para ser
+                          testado como desejar</p>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 d-flex align-items-stretch">
+                      <div class="icon-box3 mt-4 mt-xl-0">
+                        <i class="bx bx-images"></i>
+                        <h4>Apoio ao Cliente</h4>
+                        <p>Se tiver alguma dúvida
+                          em relação a um serviço ou alguma
+                          dificuldade,fornecemos um
+                          apoio personalizado
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-8 d-flex align-items-stretch">
-          <div class="icon-boxes d-flex flex-column justify-content-center">
-            <div class="row">
-              <div class="col-xl-4 d-flex align-items-stretch">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-receipt"></i>
-                  <h4>Simples</h4>
-                  <p>Numa questão de minutos 
-                    consegue-se uma marcação,
-                    sem complicações 
-                    e complexidades</p>
-                </div>
-              </div>
-              <div class="col-xl-4 d-flex align-items-stretch">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-cube-alt"></i>
-                  <h4>Serviços</h4>
-                  <p>EA diversidade dos serviços 
-                    disponibilizados oferece
-                    um leque de opções para ser 
-                    testado como desejar</p>
-                </div>
-              </div>
-              <div class="col-xl-4 d-flex align-items-stretch">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-images"></i>
-                  <h4>Apoio ao Cliente</h4>
-                  <p>Se tiver alguma dúvida 
-                    em relação a um serviço ou alguma 
-                    dificuldade,fornecemos um 
-                    apoio personalizado
-                    </p>
-                </div>
-              </div>
-            </div>
-          </div><!-- End .content-->
-        </div>
+        </section>
       </div>
     </div>
-  </section>
-  <!-- End Why Us Section -->
+
+
+    <br><br><br>
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Serviços</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="icon-box">
+              <h4><a href="">Teste Deteção</a></h4>
+              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <h4><a href="">Teste Antigénio</a></h4>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+            <div class="icon-box">
+              <h4><a href="">Teste Serológico</a></h4>
+              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            </div>
+          </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+
+
+
+
+
+  </div>
+
+
 
 
 
