--- a/projeto/index.html
+++ b/projeto/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.3.1/css/all.css'>
   <link rel="stylesheet" href="../projeto/css/index.css">
   <title>Covid Test Booking</title>
 </head>
@@ -43,7 +43,7 @@
                 <a class="nav-link" aria-current="page" href="#">Contactos</a>
               </li>
               <li class="nav-item ps-2">
-                <button type="button" class="btn btn-primary">Login</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
               </li>
               <li class="nav-item ps-2">
                 <button type="button" class="btn btn-primary">Registar</button>
@@ -123,7 +123,19 @@
 
     <br><br><br><br><br>
 
-    <!-- ======= Services Section ======= -->
+    <section class="about">
+      <div class="row">
+        <div class="embed-responsive embed-responsive-1by1">
+          <iframe class="embed-responsive-item" src="..."></iframe>
+        </div>
+        <div>
+          <p>dsnfds</p>
+        </div>
+      </div>
+    </section>
+
+    <br><br><br><br><br>
+
     <section id="services" class="services">
       <div class="container">
         <div class="section-title">
@@ -162,14 +174,8 @@
 
 
   </div>
-
-
-
-
-
+  
   <!-- contactos -->
-
-
   <br><br><br>
 
   <div class="container">
@@ -212,7 +218,11 @@
       </div>
     </div>
   </div>
+
   
+
+
 </body>
+
 
 </html>
