--- a/projeto/index.html
+++ b/projeto/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Sobre</a>
+                <a class="nav-link" aria-current="page" href="#why-us">Sobre nós</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Serviços</a>
@@ -40,7 +40,7 @@
                 <a class="nav-link" aria-current="page" href="#">Testes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Contactos</a>
+                <a class="nav-link" aria-current="page" href="#contact">Contactos</a>
               </li>
               <li class="nav-item ps-2">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
@@ -125,10 +125,12 @@
 
     <section class="about">
       <div class="row">
-        <div class="embed-responsive embed-responsive-1by1">
-          <iframe class="embed-responsive-item" src="..."></iframe>
+        <div class="col">
+          <div class="embed-responsive embed-responsive-1by1">
+            <iframe class="embed-responsive-item" src="..."></iframe>
+          </div>
         </div>
-        <div>
+        <div class="col">
           <p>dsnfds</p>
         </div>
       </div>
@@ -142,7 +144,7 @@
           <h2>Serviços</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
-
+        <br>
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
@@ -196,7 +198,7 @@
         <p>comercial@ctb.com</p>
       </div>
       <div class="col">
-        <form action="">
+        <form action="" id="contact">
           <br>
           <label for="fullname">Nome Completo:</label>
           <br>
