--- a/projeto/index.html
+++ b/projeto/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.3.1/css/all.css'>
   <link rel="stylesheet" href="../projeto/css/index.css">
   <title>Covid Test Booking</title>
@@ -14,41 +14,44 @@
 <body>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid d-flex justify-content-evenly">
-        <img src="img/LOGO.png" class="navbar-brand" height="50px" href="#" alt="">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="d-flex justify-content-end">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#why-us">Sobre nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#services">Serviços</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Testes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#contact">Contactos</a>
-              </li>
-              <li class="nav-item ps-2">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
-              </li>
-              <li class="nav-item ps-2">
-                <button type="button" class="btn btn-primary">Registar</button>
-              </li>
-            </ul>
-          </div>
-        </div>
+      <img src="img/LOGO.png" class="navbar-brand" height="50px" href="#" alt="">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto ">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#why-us">Sobre nós</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#services">Serviços</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Testes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#contact">Contactos</a>
+          </li>
+          <li class="nav-item ps-2">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
+          </li>
+          <li class="nav-item ps-2">
+            <button type="button" class="btn btn-primary">Registar</button>
+          </li>
+        </ul>
       </div>
     </nav>
+
+
+
+
+
+
+
     <div col="12">
       <div class="img">
         <img class="image_presentation" src="img/covidtry2.png" width="100%" height="500vh">
