--- a/projeto/index.html
+++ b/projeto/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/index.css">
-  <title>Document</title>
+  <title>CTB</title>
 </head>
 
 <body>
@@ -36,10 +36,10 @@
               <a class="nav-link " aria-current="page" href="#why-us">Sobre nós</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#services">Serviços</a>
+              <a class="nav-link" aria-current="page" href="#services">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#">Testes</a>
+              <a class="nav-link" aria-current="page" href="#">Testes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " aria-current="page" href="#contact">Contactos</a>
@@ -64,9 +64,33 @@
           <div class="cointainer">
             <div class="card why-us" style="width: 18rem;">
               <div class="card-body">
-                <h5 class="col-lg-4 d-flex align-items-stretch">Porquê nós</h5>
+                <h5 class="">Porquê nós</h5>
                 <p class="card-text">Some exampleSome exampleSome exampleSome exampleSome exampleSome exampleSome example</p>
-                <a href="#" class="btn btn-primary">Saber mais</a>
+                <a href="#" class="btn btn-primary btnmore">Saber mais</a>
+              </div>
+            </div>
+          </div>
+          <div class="cointainer">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body simple">
+                <h5 class="">Simples</h5>
+                <p class="card-text">Numa questão de minutos consegue-se uma marcação, sem complicações e complexidades</p>
+              </div>
+            </div>
+          </div>
+          <div class="cointainer">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body serv">
+                <h5 class="">Serviços</h5>
+                <p class="card-text">A diversidade dos serviços disponibilizados oferece um leque de opções para ser testado como desejar</p>
+              </div>
+            </div>
+          </div>
+          <div class="cointainer">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="">Apoio ao Cliente</h5>
+                <p class="card-text">Se tiver alguma dúvida em relação a um serviço ou alguma dificuldade,fornecemos um apoio personalizado</p>
               </div>
             </div>
           </div>
