--- a/projeto/index.html
+++ b/projeto/index.html
@@ -71,25 +71,25 @@
             </div>
           </div>
           <div class="cointainer">
-            <div class="card" style="width: 18rem;">
-              <div class="card-body simple">
-                <h5 class="">Simples</h5>
+            <div class="card simple" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="">Simples</h4>
                 <p class="card-text">Numa questão de minutos consegue-se uma marcação, sem complicações e complexidades</p>
               </div>
             </div>
           </div>
           <div class="cointainer">
-            <div class="card" style="width: 18rem;">
-              <div class="card-body serv">
-                <h5 class="">Serviços</h5>
+            <div class="card serv" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="">Serviços</h4>
                 <p class="card-text">A diversidade dos serviços disponibilizados oferece um leque de opções para ser testado como desejar</p>
               </div>
             </div>
           </div>
           <div class="cointainer">
-            <div class="card" style="width: 18rem;">
+            <div class="card client" style="width: 18rem;">
               <div class="card-body">
-                <h5 class="">Apoio ao Cliente</h5>
+                <h5 class="">Apoio ao Cliente</h4>
                 <p class="card-text">Se tiver alguma dúvida em relação a um serviço ou alguma dificuldade,fornecemos um apoio personalizado</p>
               </div>
             </div>
