--- a/projeto/index.html
+++ b/projeto/index.html
@@ -112,7 +112,7 @@
         <h2>Serviços</h2>
         <p>Estes são os serviços que disponibilizamos</p>
         <div class="cointainer">
-          <div class="card" style="width: 18rem;">
+          <div class="card det" style="width: 18rem;">
             <div class="card-body">
               <h5 class="">Testes Deteção</h4>
               <p class="card-text">Numa questão de minutos consegue-se uma marcação, sem complicações e complexidades</p>
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="cointainer">
-          <div class="card" style="width: 18rem;">
+          <div class="card ant" style="width: 18rem;">
             <div class="card-body">
               <h5 class="">Testes Antigénio</h4>
               <p class="card-text">Numa questão de minutos consegue-se uma marcação, sem complicações e complexidades</p>
@@ -128,7 +128,7 @@
           </div>
         </div>
         <div class="cointainer">
-          <div class="card" style="width: 18rem;">
+          <div class="card sero" style="width: 18rem;">
             <div class="card-body">
               <h5 class="">Testes Serológico</h4>
               <p class="card-text">Numa questão de minutos consegue-se uma marcação, sem complicações e complexidades</p>
