--- a/projeto/index.html
+++ b/projeto/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div id="contentor" class="container-fluid">
+  <div id="home" class="container-fluid">
     <div class="col-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <img src="img/LOGO.png" class="navbar-brand" height="50px" href="#" alt="">
@@ -42,7 +42,7 @@
               <a class="nav-link" aria-current="page" href="#">Testes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#contact">Contactos</a>
+              <a class="nav-link " aria-current="page" href="#contacts">Contactos</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -55,12 +55,12 @@
           </form>
         </div>
       </nav>
-      <div class="imgContainer">
+      <div class="imgContainer" id="why-us">
         <img src="img/covidtry2.png" class="img-fluid" width="100%" height="500vh" alt="...">
         <p class="welcometext">BEM VINDO Á COVID TEST BOOKING</p>
         <p class="welcometext2">Sem Preocupações, Sem Complicações</p>
         <button type="button" class="btn btn-primary btnimage">MARQUE AGORA</button>
-        <section id="why-us">
+        <section>
           <div class="cointainer">
             <div class="card why-us" style="width: 18rem;">
               <div class="card-body">
@@ -107,7 +107,7 @@
  
     </div> -->
 
-    <div class="container">
+    <div class="container" id="services">
       <div class="services">
         <h2>Serviços</h2>
         <p>Estes são os serviços que disponibilizamos</p>
@@ -135,9 +135,49 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
+    
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="container" id="contacts">
+      <h5>Deixe-nos uma mensagem</h5>
+      <br><br>
+      <div class="row">
+        <div class="col">
+          <h3>Morada</h3>
+          <p>Rua D. Sancho I nº981 - Vila do Conde</p>
+          <br>
+          <h3>Horarios</h3>
+          <p>2ª a 6ª feira - 10h ás 19h</p>
+          <p>Sábados - 8h ás 13h</p>
+          <p>Domingos e Feriados - Encerrados</p>
+          <br>
+          <h3>E-mail</h3>
+          <p>comercial@ctb.pt</p>
+        </div>
+        <div class="col">
+          <form action="">
+            <br>
+            <label for="fullname">Nome Completo:</label>
+            <br>
+            <input type="text" name="fullname" id="fname" placeholder="Ex: Gonçalo Pereira">
+            <br><br>
+            <label for="email">E-mail:</label>
+            <br>
+            <input type="text" name="email" id="email" placeholder="exemplo@email.pt">
+            <br><br>
+            <label for="subject">Assunto:</label>
+            <br>
+            <textarea name="subject" id="subject" cols="36" rows="10" placeholder="Escreva alguma coisa..."></textarea>
+            <br>
+            <button type="submit" class="btn btn-primary">Submeter</button>
+            <br>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </body>
 
