--- a/projeto/index.html
+++ b/projeto/index.html
@@ -245,11 +245,6 @@
             <div class="form-group d-flex justify-content-center">
               <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Registo</h5>
             </div>
-            <div class="file d-flex justify-content-center  mb-3">
-              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txtUser_photo"
-              aria-describedby="nameHelp" placeholder="Insert user photo link">  
-            </div>
-    
             <div class="form-group d-flex justify-content-center">
               <input type="email" class="form-control col-lg-6 mt-2 modalField" id="txtEmail_Register"
                 aria-describedby="emailHelp" placeholder="Email">
@@ -263,23 +258,15 @@
                 aria-describedby="LocationHelp" placeholder="Location">
             </div>
             <div class="form-group d-flex justify-content-center">
-              <select type="select" class="form-control col-lg-2 mt-2 mr-1 modalField" id="Genre_Register">
-                <option value="M">M</option>
-                <option value="f">F</option>
-                <input type="number" class="form-control col-lg-2 mt-2 mr-1 modalField" id="txtheight_Register"
-                  aria-describedby="heightnHelp" placeholder="Cm">
-                <input type="number" class="form-control col-lg-2 mt-2 mr-1 modalField" id="txtweight_Register"
-                  aria-describedby="weightHelp" placeholder="Kg">
+              <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="Genre_Register">
+                <option value="male">Masculino</option>
+                <option value="female">Feminino</option>
               </select>
 
             </div>
             <div class="form-group d-flex justify-content-center">
               <input type="date" name="bday" max="3000-12-31" min="1000-01-01"
                 class="form-control col-lg-6 mt-2 modalField" id="dBirth_Register">
-            </div>
-            <div class=" form-group d-flex justify-content-center">
-              <textarea class="form-control col-lg-6 mt-2 modalField" id="txtAboutme_Register"
-                aria-describedby="LocationHelp" placeholder="About you - Modalities, main sport..."></textarea>
             </div>
             <div class="form-group d-flex justify-content-center">
               <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txtpassword_Register"
