--- a/projeto/index.html
+++ b/projeto/index.html
@@ -179,51 +179,42 @@
   </div>
 
   <!-- Modal log In -->
-  <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <div class="d-flex justify-content-center col-lg-11">
-
-            <div class="col-lg-12 d-flex justify-content-center"><img src="images/modalIcon.png"
-                style="width: 131px; height:29px ;">
-
-            </div>
           </div>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-
         </div>
         <div class="modal-body">
-          <div id="frmLogin">
+          <div>
             <div class="form-group d-flex justify-content-center">
               <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Login</h5>
             </div>
+            <label for="usernamelogin" class="form-group d-flex justify-content-center">Username:</label>
             <div class="form-group d-flex justify-content-center">
-              <input type="email" class="form-control col-lg-6  modalField" id="txtEmail"
-                aria-describedby="emailHelp" placeholder="Email">
+              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_username_login"
+                aria-describedby="nameHelp">
             </div>
+            <label for="passwordlogin" class="form-group d-flex justify-content-center">Password:</label>
             <div class="form-group d-flex justify-content-center">
-              <input type="password" class="form-control col-lg-6 m-2 modalField" id="txtPasswordLogin"
-                placeholder="Password">
+              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_password_login"
+                aria-describedby="nameHelp">
             </div>
             <div class="d-flex justify-content-center mb-3">
-              <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
-                data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-primary navButton col-lg-3" id="btnSubmit"
-                data-target="html/activities.html">Log In</button>
-
+              <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3" data-dismiss="modal">Cancelar</button>
+              <!-- data-target="LINK PARA A PROXIMA PAGINA" -->
+              <button type="submit" class="btn btn-primary navButton col-lg-3" id="btnLogin" data-target="">Login</button>   
             </div>
-            <div id="mdlLoginMessage" class="col-lg-12 d-flex justify-content-center">
-              
+            <div id="mdlRegisterMessage" class="col-lg-12 d-flex justify-content-center">
             </div>
-
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
