--- a/projeto/index.html
+++ b/projeto/index.html
@@ -258,7 +258,7 @@
                 aria-describedby="addressHelp" placeholder="Endereço">
             </div>
             <div class="form-group d-flex justify-content-center">
-              <input type="number" max="999999999" min="111111111" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_register"
+              <input type="tel" max="999999999" min="111111111" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_register"
                 aria-describedby="phoneHelp" placeholder="Telefone">
             </div>
             <div class="form-group d-flex justify-content-center">
