profile page begin

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -67,7 +67,7 @@
               <div class="card-body">
                 <h5 class="">Porquê nós</h5>
                 <p class="card-text">Some exampleSome exampleSome exampleSome exampleSome exampleSome exampleSome example</p>
-                <a href="#" class="btn btn-primary btnmore">Saber mais</a>
+                <a href="#services" class="btn btn-primary btnmore">Saber mais</a>
               </div>
             </div>
           </div>
