--- a/projeto/index.html
+++ b/projeto/index.html
@@ -146,6 +146,7 @@
         <br><br>
         <div class="row">
           <div class="col">
+            <br>
             <h3>Morada</h3>
             <p>Rua D. Sancho I Nº981 - Vila do Conde</p>
             <br>
@@ -193,7 +194,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <div class="d-flex justify-content-center col-lg-11">
-          </div>
+          </div id="frmLogin">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -237,7 +238,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <div>
+          <div id="frmRegister">
             <div class="form-group d-flex justify-content-center">
               <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Registo</h5>
             </div>
