--- a/projeto/index.html
+++ b/projeto/index.html
@@ -50,7 +50,7 @@
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
             </li>
             <li class="nav-item ps-2">
-              <button type="button" class="btn btn-primary ml-3" data-toggle="modal" data-target="#SigninModal">Registar</button>
+              <button type="button" class="btn btn-primary ml-3" data-toggle="modal" data-target="#registerModal">Registar</button>
             </li>
             <li class="nav-item ps-2">
               <button type="button" class="btn btn-primary" style="visibility: hidden;">Logout</button>
@@ -226,7 +226,7 @@
   </div>
 
   <!--MODAL REGISTAR-->
-  <div class="modal fade" id="SigninModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
