--- a/projeto/index.html
+++ b/projeto/index.html
@@ -256,7 +256,7 @@
               </div>
               <div class="form-group d-flex justify-content-center">
                 <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_register"
-                  aria-describedby="addressHelp" placeholder="Endereço">
+                  aria-describedby="addressHelp" placeholder="Morada">
               </div>
               <div class="form-group d-flex justify-content-center">
                 <input type="tel" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_register"
