--- a/projeto/index.html
+++ b/projeto/index.html
@@ -38,7 +38,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <a href="index.html" class="logo mr-auto"><img src="img\LOGO.png" alt=yes"" class="img-fluid"></a>
+      <a href="index.html" class="logo mr-auto"><img src="img\LOGO.png" alt="yes" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block align-items-center">
         <ul>
@@ -57,7 +57,9 @@
 
       <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
 
-      <button type="button" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</button>
+      
+
+      <!-- <button type="button" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</button> -->
     </div>
   </header><!-- End Header -->
 
@@ -174,7 +176,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2>Serviços</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
             in iste officiis commodi quidem hic quas.</p>
