--- a/projeto/index.html
+++ b/projeto/index.html
@@ -386,9 +386,7 @@
 
         <div class="section-title">
           <h2>Contactos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Deixe-nos uma mensagem</p>
         </div>
       </div>
 
