--- a/projeto/index.html
+++ b/projeto/index.html
@@ -49,9 +49,9 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#loginModal" class="btn btn-primary" data-toggle="modal" id="btnLogin">Login</a>
+      <a href="#loginModal" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
 
-      <a href="#registerModal" class="btn btn-primary" data-toggle="modal" id="btnRegister">Registar</a>
+      <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
 
       <a href="#" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</a>
 
@@ -87,7 +87,7 @@
                 corporis.
               </p>
               <div class="text-center">
-                <a href="#about" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
+                <a href="#about" class="more-btn">Saber mais<i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
           </div>
@@ -212,9 +212,7 @@
 
         <div class="section-title">
           <h2>Tipos de Teste</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Este website disponibiliza e facilita a marcação de vários tipos de testes Covid-19: Teste de Deteção, Teste Antigénio e Teste Serológico  </p>
         </div>
 
         <div class="row">
@@ -237,11 +235,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Teste de Deteção</h3>
-                    <p class="font-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata
-                      raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa
-                      odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni
-                      nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <p class="font-italic">Trata-se do teste de eleição no diagnóstico da COVID-19 que pesquisa diretamente o coronavírus SARS-CoV-2 nas vias respiratórias.</p>
+                    <p> O método utilizado para a deteção do vírus é o PCR (Polymerase Chain Reaction), pela elevada sensibilidade e especificidade na identificação simultânea de vários genes do vírus.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="img\test_deteçao.jpg" alt="" class="img-fluid">
@@ -252,11 +247,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Teste Antigénio</h3>
-                    <p class="font-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata
-                      raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt
-                      est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque
-                      beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                    <p class="font-italic">O Teste Rápido de Antigénio é um teste de proximidade “Point of Care”, que permite detetar as proteínas do coronavírus.</p>
+                    <p> São testes com uma menor sensibilidade do que a metodologia de referência (Teste RT-PCR) e permitem identificar rapidamente os indivíduos infetados quando a colheita é realizada nos 5 primeiros dias da doença.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="img\teste_antigenio.jpeg" alt="" class="img-fluid">
@@ -267,11 +259,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Teste Serológico</h3>
-                    <p class="font-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus
-                      non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque
-                      necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum
-                      odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <p class="font-italic">Os testes serológicos permitem avaliar se uma pessoa tem anticorpos específicos para o vírus SARS-CoV-2. Atualmente, sabemos que só tem anticorpos quem já teve contacto com o vírus e que é possível uma pessoa ter anticorpos no sangue e não estar com infeção aguda.</p>
+                    <p>Estes testes realizam-se através de uma pequena colheita de sangue (que pode ser apenas uma picada no dedo) que é depois analisada.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="img\teste_serologico.jpg" alt="" class="img-fluid">
@@ -478,7 +467,7 @@
                 aria-describedby="nameHelp" placeholder="Username">
             </div>
             <div class="form-group d-flex justify-content-center">
-              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_password_login"
+              <input type="password" class="form-control col-lg-6 mt-2 modalField" id="txt_password_login"
                 aria-describedby="nameHelp" placeholder="Password">
             </div>
             <div class="d-flex justify-content-center mb-3">
